tests/macros/duplicate/when.stderr
error: duplicate option `when`
 --> $DIR/when.rs:4:9
  |
4 |         when: todo!(),
  |         ^^^^
