tests/macros/duplicate/when.rs
fn main() {
    let q = inquisition::questions![input {
        when: todo!(),
        when: todo!(),
    }];
}
